<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/tombolbuatpesan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/buatpesan" />

    <Button
        android:id="@+id/tombolpesanmasuk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/tombolpesankeluar"
        android:layout_below="@+id/tombolbuatpesan"
        android:layout_marginTop="31dp"
        android:text="@string/pesanmasuk" />

    <Button
        android:id="@+id/tombolexit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tombolpesankeluar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/keluar" />

    <Button
        android:id="@+id/tombolpesankeluar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tombolpesanmasuk"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/pesankeluar" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/intro"
        android:textStyle="italic" />

</RelativeLayout>